Fixed prices alignment.
Fixed weight with 0 value being displayed.

--- a/src/components/selected-item-summary/item/SelectedItemSummaryComponent.css
+++ b/src/components/selected-item-summary/item/SelectedItemSummaryComponent.css
@@ -25,7 +25,7 @@
 
 .selected-item-summary-price-per-unit {
   font-size: 0.75rem;
-  margin-right: 2.7rem;
+  margin-right: 2.6rem; /* Alignment with the item total price */
 }
 
 .selected-item-summary-right {
@@ -53,6 +53,22 @@
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: end;
-  margin-left: 1rem;
+  margin-left: 1.10rem; /* Alignment with the inventory slot price */
+  margin-right: 0.2rem; /* Alignment with the inventory slot weight */
   width: 7rem;
+}
+
+.selected-item-summary-weight .icon-after-text {
+  margin-left: 0.4rem; /* Alignment with the inventory slot weight */
+}
+
+.selected-item-summary-weight-per-unit {
+  font-size: 0.75rem;
+  margin-right: 0.3rem; /* Alignment with the item total weight */
+}
+
+.selected-item-summary-weight-per-unit .icon-after-text {
+  margin-left: 0.5rem; /* Alignment with the item total weight */
+  min-height: auto;
+  min-width: auto;
 }
